--- a/Home.html
+++ b/Home.html
@@ -50,19 +50,19 @@
         </p>
         <h1 class="u-custom-font u-font-ubuntu u-text u-text-white u-title u-text-4" data-animation-name="customAnimationIn" data-animation-direction="" data-animation-duration="1000" data-animation-delay="750"> ᴅᴀɴɢᴇʀᴢᴏɴᴇ</h1>
         <div class="u-image u-image-circle u-image-contain u-preserve-proportions u-image-2" alt="" data-image-width="150" data-image-height="150" data-animation-name="customAnimationIn" data-animation-duration="1250" data-animation-delay="3000"></div>
-        <p class="u-align-left u-custom-font u-font-ubuntu u-large-text u-text u-text-variant u-text-white u-text-5" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="2000" data-animation-direction="">-&nbsp;ᴛʀɪᴀʟ ᴅᴇᴠᴇʟᴏᴘᴇʀ<br> - ​ᴅɪѕᴄᴏʀᴅ ʙᴏᴛ ᴅᴇᴠᴇʟᴏᴘᴇʀ<br>
+        <p class="u-align-left u-custom-font u-font-ubuntu u-large-text u-text u-text-variant u-text-white u-text-5" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="2000" data-animation-direction="">- ᴅᴇᴠᴇʟᴏᴘᴇʀ<br> - ​ᴅɪѕᴄᴏʀᴅ ʙᴏᴛ ᴅᴇᴠᴇʟᴏᴘᴇʀ<br>
         </p>
         <h1 class="u-custom-font u-font-ubuntu u-text u-text-white u-title u-text-6" data-animation-name="customAnimationIn" data-animation-direction="" data-animation-duration="1000" data-animation-delay="1000" data-animation-out="1"> ᴘᴀᴘᴇʀᴡᴏʀᴋᴍᴄ</h1>
         <div class="u-image u-image-circle u-image-contain u-preserve-proportions u-image-3" alt="" data-image-width="1200" data-image-height="1200" data-animation-name="customAnimationIn" data-animation-duration="1250" data-animation-delay="3250"></div>
         <p class="u-align-left u-custom-font u-font-ubuntu u-large-text u-text u-text-variant u-text-white u-text-7" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="2250" data-animation-direction=""> -&nbsp;​ᴅᴇᴠᴇʟᴏᴘᴍᴇɴᴛ ᴛᴇᴀᴍ<br> - ​ᴀᴅᴍɪɴɪѕᴛʀᴀᴛᴏʀ<br>
         </p>
-        <h1 class="u-custom-font u-font-ubuntu u-text u-text-white u-title u-text-8" data-animation-name="customAnimationIn" data-animation-direction="" data-animation-duration="1000" data-animation-delay="1250" data-animation-out="1"> ʙᴇᴅʙᴏᴍʙɪɴɢ ɴᴇᴛᴡᴏʀᴋ</h1>
-        <div class="u-image u-image-circle u-image-contain u-preserve-proportions u-image-4" alt="" data-image-width="96" data-image-height="96" data-animation-name="customAnimationIn" data-animation-duration="1250" data-animation-delay="3500"></div>
-        <p class="u-align-left u-custom-font u-font-ubuntu u-large-text u-text u-text-variant u-text-white u-text-9" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="2500" data-animation-direction=""> -&nbsp;​ɢʟᴏʙᴀʟ ᴅᴇᴠᴇʟᴏᴘᴇʀ<br> - ​ᴀᴅᴍɪɴɪѕᴛʀᴀᴛᴏʀ<br>
+        <h1 class="u-custom-font u-font-ubuntu u-text u-text-white u-title u-text-8" data-animation-name="customAnimationIn" data-animation-direction="" data-animation-duration="1000" data-animation-delay="1500" data-animation-out="1"> ɢᴜɴѕʙᴏх</h1>
+        <div class="u-image u-image-circle u-image-contain u-preserve-proportions u-image-4" alt="" data-image-width="150" data-image-height="150" data-animation-name="customAnimationIn" data-animation-duration="1250" data-animation-delay="3750"></div>
+        <p class="u-align-left u-custom-font u-font-ubuntu u-large-text u-text u-text-variant u-text-white u-text-9" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="2750" data-animation-direction=""> -&nbsp;​​ʟᴇᴀᴅ ᴅᴇᴠᴇʟᴏᴘᴇʀ<br> - ​​ᴄᴏ-ᴏᴡɴᴇʀ<br>
         </p>
-        <h1 class="u-custom-font u-font-ubuntu u-text u-text-white u-title u-text-10" data-animation-name="customAnimationIn" data-animation-direction="" data-animation-duration="1000" data-animation-delay="1500" data-animation-out="1"> ɢᴜɴѕʙᴏх</h1>
+        <h1 class="u-custom-font u-font-ubuntu u-text u-text-white u-title u-text-10" data-animation-name="customAnimationIn" data-animation-direction="" data-animation-duration="1000" data-animation-delay="1500" data-animation-out="1"> ѕᴋʏᴢᴏɴᴇᴅ</h1>
         <div class="u-image u-image-circle u-image-contain u-preserve-proportions u-image-5" alt="" data-image-width="150" data-image-height="150" data-animation-name="customAnimationIn" data-animation-duration="1250" data-animation-delay="3750"></div>
-        <p class="u-align-left u-custom-font u-font-ubuntu u-large-text u-text u-text-variant u-text-white u-text-11" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="2750" data-animation-direction=""> -&nbsp;​​ʟᴇᴀᴅ ᴅᴇᴠᴇʟᴏᴘᴇʀ<br> - ​​ᴄᴏ-ᴏᴡɴᴇʀ<br>
+        <p class="u-align-left u-custom-font u-font-ubuntu u-large-text u-text u-text-variant u-text-white u-text-11" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="2750" data-animation-direction=""> -&nbsp;​​​ᴛʀɪᴀʟ ᴅᴇᴠᴇʟᴏᴘᴇʀ<br>
         </p>
       </div>
     </section>
